--- a/index.html
+++ b/index.html
@@ -30,6 +30,6 @@
 </head>
 <body>
   <h1>Hello!</h1>
-  <p>Welcome to Numeric Nexus. More content is coming soon! By : Taksh</p>
+  <p>Welcome to Numeric Nexus. More content is coming soon!</p>
 </body>
 </html>
